--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
 	<head>
-		<title>GW CS Senior Design FILL-IN-YOUR-NAME</title>
+		<title>GW CS Senior Design Phil Lopreiato</title>
 		<style>
 		body {
 	background-color: #005A81;
@@ -62,27 +62,27 @@ a {
 	<body>
 		<div id="header_div">
 			<p>
-			<a href="https://capstone.cs.gwu.edu/">GW CS Senior Design</a> FILL-IN-YOUR-GRADUATION-YEAR
+			<a href="https://capstone.cs.gwu.edu/">GW CS Senior Design</a> 2017
 			</p>
 		</div>
 		<div id="outer_div">
 			<div id="middle_div">
 				<div class="subheader_div">
-					<h2>FILL-IN YOUR NAME: PROJECT TITLE</h2>
+					<h2>Distributed OpenNetVM</h2>
 					<img src="images/headshot.jpg" width="150">
 				</div>
 				<div id="inside_div"> 
 					<p>
-						FILL-IN YOUR PROJECT OVERVIEW.
+						Mostly magic.
 					</p> 
 					<p>
 						<strong>Bio:</strong>
-						FILL-IN YOUR BIO 
+						I do stuff.
 					</p>
 					<p>
 						<strong>Documentation:</strong> 							
 						<ul>
-							FILL-IN LINKS TO EACH OF YOUR WRITING AND DESIGN DOCS (store them in the docs/ folder)
+							Voodoo magic.
 						</ul>
 
 						<!--
