--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@ a {
 				</div>
 				<div id="inside_div"> 
 					<p>
-						Mostly magic.
+						This project will extend <a href="http://sdnfv.github.io/onvm/">OpenNetVM</a> to function as a distributed system. This will allow fast, distributed packet processing to take place at large scales than the project currently allows.
 					</p> 
 					<p>
 						<strong>Bio:</strong>
-						I do stuff.
+						I do stuff. I like systems code. I have a job at Facebook.
 					</p>
 					<p>
 						<strong>Documentation:</strong> 							
 						<ul>
-							Voodoo magic.
+							Voodoo magic. And cattle.
 						</ul>
 
 						<!--
