--- a/index.html
+++ b/index.html
@@ -76,15 +76,16 @@ a {
 						<a href="http://sdnfv.github.io/onvm/">OpenNetVM (ONVM)</a> is a highly efficient network packet processing framework that provides simple abstraction for developing and running network functions. The ONVM platform provides load balancing, flexible packet flow management, individualized service abstractions, and basic software defined networking (SDN) capabilities. The platform already offers best-in-class performance with the ability to maintain 40 Gbps speeds while routing packets through dynamically created chains of network functions and lowers the barriers to deploying production network functions (NFs) in software, all while running on inexpensive commodity hardware. However, this idea can be improved upon: we aim to make it possibly for multiple instances of ONVM to process packets in tandem, with seamless inter-routing, making it possible to run software-based network services at production scale.
 
 					</p> 
+					<h3>Bio</h3>
 					<p>
-						<strong>Bio:</strong>
 						Phil Lopreiato is a computer scientist interested in large distributed systems, the Android Operating System, and anything the layman might call "Black Magic". He is currently a senior at GWU with future plans to work sas a software engineer at Facebook.
 					</p>
 					<p>
-						<strong>Documentation:</strong> 							
-						<ul>
-							Voodoo magic. And cattle.
-						</ul>
+					<h3>Documentation</h3> 							
+					<ul>
+						<li>Voodoo magic.</li> 
+						<li>Cattle.</li>
+					</ul>
 
 						<!--
 						<iframe 
