--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ a {
 					<h3>Documentation</h3>
 					<ul>
                         <li><a href="proposal.pdf">Project Proposal</a></li>
+                        <li><a href="http://sdnfv.github.io/onvm/">OpenNetVM</a></li>
 						<li>Voodoo magic.</li>
 						<li>Cattle.</li>
 					</ul>
