--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@ a {
 						Phil Lopreiato is a computer scientist interested in large distributed systems, the Android Operating System, and anything the layman might call "Black Magic". He is currently a senior at GWU with future plans to work sas a software engineer at Facebook.
 					</p>
 					<p>
+                    <h3>Presentations</h3>
+                    <ul>
+                        <li><a href="presentations/presentation1.pdf">Tech Tutorial: Apache Zookeeper</a></li>
+                        <li><a href="presentations/presentation2.pdf">OpenNetVM Sales Pitch</a></li>
+                        <li><a href="presentations/presentation3.pdf">Distributed OpenNetVM Architecture Overview</a></li>
+                    </ul>
 					<h3>Documentation</h3>
 					<ul>
                         <li><a href="proposal.pdf">Project Proposal</a></li>
