Add design document to website

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ a {
 					<h3>Documentation</h3>
 					<ul>
                         <li><a href="proposal.pdf">Project Proposal</a></li>
+                        <li><a href="designdoc.pdf">Software Design Document</a></li>
                         <li><a href="http://sdnfv.github.io/onvm/">OpenNetVM</a></li>
 						<li>Voodoo magic.</li>
 						<li>Cattle.</li>
