--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@ a {
 			<div id="middle_div">
 				<div class="subheader_div">
 					<h2>Distributed OpenNetVM</h2>
-					<img src="images/headshot.jpg" width="150">
+					<img src="headshot.jpg" width="150">
 				</div>
 				<div id="inside_div">
 					<p>
-						<a href="http://sdnfv.github.io/onvm/">OpenNetVM (ONVM)</a> is a highly efficient network packet processing framework that provides simple abstraction for developing and running network functions. The ONVM platform provides load balancing, flexible packet flow management, individualized service abstractions, and basic software defined networking (SDN) capabilities. The platform already offers best-in-class performance with the ability to maintain 40 Gbps speeds while routing packets through dynamically created chains of network functions and lowers the barriers to deploying production network functions (NFs) in software, all while running on inexpensive commodity hardware. However, this idea can be improved upon: we aim to make it possibly for multiple instances of ONVM to process packets in tandem, with seamless inter-routing, making it possible to run software-based network services at production scale.
+						<a href="http://sdnfv.github.io/onvm/">OpenNetVM (ONVM)</a> is a highly efficient network packet processing framework that provides simple abstraction for developing and running network functions. The ONVM platform provides load balancing, flexible packet flow management, individualized service abstractions, and basic software defined networking (SDN) capabilities. The platform already offers best-in-class performance with the ability to maintain 40 Gbps speeds while routing packets through dynamically created chains of network functions and lowers the barriers to deploying production network functions (NFs) in software, all while running on inexpensive commodity hardware. However, this idea can be improved upon: we have made it possible for multiple instances of ONVM to process packets in tandem, with seamless inter-routing, making it possible to run software-based network services at production scale. In addition, network functions have the ability to automatically scale themselves in accordance with the current system load.
 
 					</p>
 					<h3>Bio</h3>
 					<p>
-						Phil Lopreiato is a computer scientist interested in large distributed systems, the Android Operating System, and anything the layman might call "Black Magic". He is currently a senior at GWU with future plans to work sas a software engineer at Facebook.
+						Phil Lopreiato is a computer scientist interested in large distributed systems, the Android Operating System, and anything the layman might call "Black Magic". He is currently a senior at GWU with future plans to work as a software engineer at Facebook in New York, NY after graduation.
 					</p>
 					<p>
                     <h3>Presentations</h3>
@@ -86,6 +86,7 @@ a {
                         <li><a href="presentations/presentation1.pdf">Tech Tutorial: Apache Zookeeper</a></li>
                         <li><a href="presentations/presentation2.pdf">OpenNetVM Sales Pitch</a></li>
                         <li><a href="presentations/presentation3.pdf">Distributed OpenNetVM Architecture Overview</a></li>
+                        <li><a href="presentations/presentation7.pdf">Final Slides: Distributed OpenNetVM</a></li>
                     </ul>
 					<h3>Documentation</h3>
 					<ul>
