Add link to zk docs

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@ a {
                         <li><a href="proposal.pdf">Project Proposal</a></li>
                         <li><a href="designdoc.pdf">Software Design Document</a></li>
                         <li><a href="http://sdnfv.github.io/onvm/">OpenNetVM</a></li>
-						<li>Voodoo magic.</li>
-						<li>Cattle.</li>
+                        <li><a href="https://github.com/gw-cs-sd/sd-2017-distributed-opennetvm/blob/master/onvm/docs/Zookeeper.md">ZooKeeper Config</a></li>
 					</ul>
 
 						<!--
