--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
 	<head>
-		<title>GW CS Senior Design Phil Lopreiato</title>
+		<title>Phil Lopreiato - GW SD 2017</title>
 		<style>
 		body {
 	background-color: #005A81;
