--- a/index.html
+++ b/index.html
@@ -95,16 +95,7 @@ a {
                         <li><a href="http://sdnfv.github.io/onvm/">OpenNetVM</a></li>
                         <li><a href="https://github.com/gw-cs-sd/sd-2017-distributed-opennetvm/blob/master/onvm/docs/Zookeeper.md">ZooKeeper Config</a></li>
 					</ul>
-
-						<!--
-						<iframe
-							width="420"
-							height="315"
-							src="FILL-IN YOUR YOUTUBE LINK at end of year and uncomment"
-							frameborder="0"
-							allowfullscreen>
-						</iframe>
-						!-->
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/MuSnMuHLA_A" frameborder="0" allowfullscreen></iframe>
 					</p>
 				</div>
 			</div>
