--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@ a {
                         <li><a href="http://sdnfv.github.io/onvm/">OpenNetVM</a></li>
                         <li><a href="https://github.com/gw-cs-sd/sd-2017-distributed-opennetvm/blob/master/onvm/docs/Zookeeper.md">ZooKeeper Config</a></li>
 					</ul>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/MuSnMuHLA_A" frameborder="0" allowfullscreen></iframe>
+
+                    <h3>Presentation Screencast</h3>
+                    <video id="screencast" width="640" height="480" controls>
+                        <source src="screencast.mp4">
+                    </video>
 					</p>
 				</div>
 			</div>
