--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@ a {
                         <li><a href="presentations/presentation1.pdf">Tech Tutorial: Apache Zookeeper</a></li>
                         <li><a href="presentations/presentation2.pdf">OpenNetVM Sales Pitch</a></li>
                         <li><a href="presentations/presentation3.pdf">Distributed OpenNetVM Architecture Overview</a></li>
-                        <li><a href="presentations/presentation7.pdf">Final Slides: Distributed OpenNetVM</a></li>
+                        <li><a href="presentations/presentation7.pdf">Final Presentation: Distributed OpenNetVM</a></li>
                     </ul>
 					<h3>Documentation</h3>
 					<ul>
                         <li><a href="proposal.pdf">Project Proposal</a></li>
                         <li><a href="designdoc.pdf">Software Design Document</a></li>
+                        <li><a href="poster.pdf">Project Overview Poster</a></li>
                         <li><a href="http://sdnfv.github.io/onvm/">OpenNetVM</a></li>
                         <li><a href="https://github.com/gw-cs-sd/sd-2017-distributed-opennetvm/blob/master/onvm/docs/Zookeeper.md">ZooKeeper Config</a></li>
 					</ul>
